--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-colosseum = "0.2.2"
 lock_api = "0.4.9"
-#safe-once = { git = "https://github.com/nathdobson/safe-once.git", rev = "8945591bce5c7b441f81b9cf536c126b48f0aca2", features = [] }
-safe-once = { path = "../safe-once" }
+safe-once = { path = "../safe-once", features = [] }
 parking_lot = { version = "0.12.1", optional = true }
-cache-padded = "1.2.0"
 
 [dev-dependencies]
 dashmap = "5.4.0"
