--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 lock_api = "0.4.9"
 safe-once = { path = "../safe-once", features = [] }
+safe-once-async = { path = "../safe-once-async", features = [] }
 parking_lot = { version = "0.12.1" }
+tokio = "1.26.0"
 
 [dev-dependencies]
 dashmap = "5.4.0"
