--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lock_api = "0.4.9"
+lock_api = "0.4.12"
 safe-once = { path = "../safe-once", features = [] }
-safe-once-async = { path = "../safe-once-async", features = [] }
-parking_lot = { version = "0.12.1" }
-tokio = "1.26.0"
+safe-once-async = { path = "../safe-once-async" }
+parking_lot = { version = "0.12.3" }
+tokio = "1.38.0"
 
 [dev-dependencies]
-dashmap = "5.4.0"
-itertools = "0.10.5"
+dashmap = "5.5.3"
+itertools = "0.13.0"
 chashmap = "2.2.2"
-concurrent-map = "5.0.6"
+concurrent-map = "5.0.33"
 rand = { version = "0.8.5", features = ["small_rng"] }
 statistical = "1.0.0"
 linreg = "0.2.0"
+tokio = {version = "1.38.0",features = ["rt"]}
+futures = "0.3.30"
+safe-once-async = {path="../safe-once-async", features = ["tokio-rt"]}
